[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/hands/Fragezeichen.png" type="Texture" id=1]
[ext_resource path="res://UI/Help.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/KellySlab-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -1788.0
margin_bottom = -950.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_right = 129.0
margin_bottom = 127.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HelpLabel" type="RichTextLabel" parent="Panel"]
margin_top = 128.0
margin_right = 809.0
margin_bottom = 515.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[connection signal="mouse_entered" from="Panel/TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="Panel/TextureRect" to="." method="_on_TextureRect_mouse_exited"]
